front-envoy/front-envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-conf
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              access_log:
              - name: envoy.file_access_log
                config:
                  path: "/dev/stdout"
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: http
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/app1/"
                    route:
                      cluster: go-app1
                  - match:
                      prefix: "/app2/"
                    route:
                      cluster: go-app2
              http_filters:
              # - name: envoy.health_check
              #   config:
              #     pass_through_mode: false
              #     headers:
              #     - name: ":path"
              #       exact_match: "/healthz"
              #     - name: "x-envoy-livenessprobe"
              #       exact_match: "healthz"
              - name: envoy.router
                config: {}
      clusters:
      - name: go-app1
        connect_timeout: 0.5s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: go-app1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: go-app1-service.default.svc.cluster.local
                    port_value: 3000
      - name: go-app2
        connect_timeout: 0.5s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: go-app2
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: go-app2-service.default.svc.cluster.local
                    port_value: 3000
        health_checks:
          timeout: 1s
          interval: 10s
          unhealthy_threshold: 2
          healthy_threshold: 2
          grpc_health_check: {}
    admin:
      access_log_path: "/dev/stdout"
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8090
