front-envoy/front-envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.9.1
        resources: {}
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/envoy
        # readinessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /healthz
        #     httpHeaders:
        #     - name: x-envoy-livenessprobe
        #       value: healthz
        #     port: 80
        #   initialDelaySeconds: 3
        # livenessProbe:
        #   httpGet:
        #     scheme: HTTP
        #     path: /healthz
        #     httpHeaders:
        #     - name: x-envoy-livenessprobe
        #       value: healthz
        #     port: 80
        #   initialDelaySeconds: 10
      volumes:
      - name: config
        configMap:
          name: envoy-conf
