front-envoy/front-envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
